# path_planning

./: CMakeLists.txt  package.xml  setup.py
config/: big_infinity.yaml  infinity_path.yaml  waypoints.yaml
launch/: setpoints.launch
nodes/: path_follower_node  setpoint_node.py
scripts/: create_test_paths.py
src/path_planning/: path_generation.py  path_planner.py  path_planning.py
